--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@fontsource/poppins": "^4.5.0",
+		"@remix-run/dev"
 		"@reduxjs/toolkit": "^1.7.1",
 		"date-fns": "^2.28.0",
 		"framer-motion": "^5.5.1",
